add more var types to gui editor

--- a/src/panhandler/templates/panhandler/edit_skillet.html
+++ b/src/panhandler/templates/panhandler/edit_skillet.html
@@ -1209,6 +1209,8 @@
                         <option value="fqdn_or_ip">FQDN</option>
                         <option value="ip_address">IP Address</option>
                         <option value="cidr">CIDR (IP with Netmask)</option>
+                        <option value="hidden">Hidden</option>
+                        <option value="disabled">Disabled</option>
                     </select>
                     <!-- Dropdown Items -->
                     <div class="form-group">
